--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
       <version>5.7.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-indexer</artifactId>
+      <version>5.1.8.RELEASE</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
   <build>
     <finalName>springbasic</finalName>
