--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
       <version>5.1.8.RELEASE</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>springbasic</finalName>
